--- a/my.cnf
+++ b/my.cnf
@@ -1,5 +1,4 @@
 [mysqld]
-default_authentication_plugin=mysql_native_password
 skip-host-cache
 skip-name-resolve
 datadir=/var/lib/mysql
@@ -7,7 +6,7 @@ socket=/var/run/mysqld/mysqld.sock
 secure-file-priv=/var/lib/mysql-files
 user=mysql
 server-id=2
-relay-log = /var/lib/mysql/mysql-relay-bin.log
+relay-log = /var/lib/mysql/mysql-relay-bin
 binlog_do_db=Blitzvideo
 pid-file=/var/run/mysqld/mysqld.pid
 
