--- a/my.cnf
+++ b/my.cnf
@@ -1,4 +1,5 @@
 [mysqld]
+default_authentication_plugin=mysql_native_password
 skip-host-cache
 skip-name-resolve
 datadir=/var/lib/mysql
@@ -6,7 +7,7 @@ socket=/var/run/mysqld/mysqld.sock
 secure-file-priv=/var/lib/mysql-files
 user=mysql
 server-id=2
-relay-log = /var/lib/mysql/mysql-relay-bin
+log_bin=1
 binlog_do_db=Blitzvideo
 pid-file=/var/run/mysqld/mysqld.pid
 
