--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
-version: '3.5'
+version: "3.5"
 services:
-  mysql_slave:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: "mysql-slave"
+  base_esclavo:
+    image: mysql:8.0.30
+    container_name: mysql-slave
     restart: unless-stopped
     ports:
-      - 3307:3306  # Asegúrate de usar un puerto diferente al del maestro, por ejemplo, 3307
+      - "3306:3306"
     volumes:
-      - mysqldata:/var/lib/mysql
-      - ./my.cnf:/etc/mysql/my.cnf
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./mysqldata_slave:/var/lib/mysql
+      - ./my.cnf:/etc/my.cnf
+      - ./init-slave.sql:/docker-entrypoint-initdb.d/init-slave.sql
     environment:
       - MYSQL_ROOT_PASSWORD=Blitzcode1.
+      - MYSQL_USER=admin
       - MYSQL_DATABASE=Blitzvideo
-    command: ['mysqld', '--default-authentication-plugin=mysql_native_password', '--skip-tls']
-volumes:
-  mysqldata:
+      - MYSQL_PASSWORD=4adm1n.
+networks:
+  default:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.1.0/24
